<resources>

    <string name="app_name">EAT THIS</string>
    <string name="welcome">WELCOME</string>
    <string name="home">Home</string>
    <string name="fav">Favourite</string>
    <string name="search">Search</string>
    <string name="plan">Your Plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="WelcomeBack">Welcome Back</string>
    <string name="orConnectUsing">or connect using</string>
    <string name="guest">Continue as a guest</string>
    <string name="Login">login</string>
    <string name="SignUP">signup</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="loginBtn">Login</string>
    <string name="Signup">Signup</string>
    <string name="mealOfTheDay">Daily Inspiration</string>
    <string name="Favourite">Favourite Meals:</string>
    <string name="add_plan">ADD TO PLAN</string>
    <string name="ingrediants">Ingredients</string>
    <string name="recipe">Recipe</string>
    <string name="next">NEXT</string>
    <string name="getStared">GET START</string>
    <string name="Ingredients">Ingredients</string>
    <string name="Area">Area</string>
    <string name="Caategory">Category</string>
    <string name="Meals">Meals</string>
    <string name="search_by">search by:</string>
    <string name="hintSearchIng">Search by Ingredients</string>
    <string name="hintSearchCat">Search by Category</string>
    <string name="hintSearchArea">Search by Area</string>
    <string name="hintSearchMeal">Search by Meal</string>
    <string-array name="days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_to_plan">Add To Plan</string>
    <string name="access">create an account to access this feature</string>
    <string name="continueGuest">YES,continue</string>
    <string name="cancelGuest">NO, cancel</string>
    <string name="loginGuest">Logging in as guest...</string>
    <string name="sureMsg">Are you sure you want to continue as a guest?</string>
    <string name="titleGuest">You\'ll miss out personalized content and full app features</string>
    <string name="checkConnectionGuest">Check your internet connection to continue as a guest</string>
    <string name="checkConnection">Check your internet connection</string>
    <string name="GuestName">Guest</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="usin_google">Continue with Google</string>
    <string name="meal_added">Meal added to </string>
    <string name="sunday">Sun.</string>
    <string name="monday">Mon.</string>
    <string name="tueday">Tue.</string>
    <string name="wednesday">Wed.</string>
    <string name="Thursday">Thu.</string>
    <string name="friday">Fri.</string>
    <string name="saturday">Sat.</string>
    <string name="daily">Your Daily Plan:</string>
    <string name="weekly">Your Weekly Plan</string>
    <string name="remove_plan">Removed From Plan</string>
    <string name="remove_fav">Removed From Favourite</string>
    <string name="add_fav">Added To Favourite</string>

</resources>