<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@mipmap/login"
    tools:context=".Login_Fragment" >

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/butterchicken"
        android:text="@string/Login"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:background="#000000"
        android:backgroundTint="@color/bottom_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <TextView
        android:id="@+id/Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/butterchicken"
        android:text="@string/SignUP"
        android:textColor="#9A9797"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/yellow_dark"
        android:drawableLeft="@drawable/mail_fill0_wght400_grad0_opsz48"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textPersonName"
        android:minHeight="50dp"
        android:textColor="@color/black"
        android:textColorHint="#918C8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/yellow_dark"
        android:drawableLeft="@drawable/visibility_off_fill0_wght400_grad0_opsz48"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:textColor="@color/black"
        android:textColorHint="#918C8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/gabriola"
        android:text="@string/forgetPassword"
        android:textColor="@color/bottom_selector"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LOGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/butterchicken"
        android:gravity="center"
        android:insetBottom="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/loginBtn"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassword"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>