<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    tools:context=".SearchFragment">

    <LinearLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.75"
            app:cardBackgroundColor="@color/bottom_selector"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp">

            <Button
                android:id="@+id/ingrediantBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#f5f5f5"
                android:drawableLeft="@mipmap/fork"
                android:drawableTint="#000000"
                android:gravity="center"
                android:text="@string/Ingredients"
                android:textColor="#0B0909"
                android:textSize="20sp"
                app:cornerRadius="20dp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.75"
            app:cardBackgroundColor="@color/bottom_selector"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp">

            <Button
                android:id="@+id/areaBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#f5f5f5"
                android:drawableLeft="@mipmap/fork"
                android:drawableTint="#000000"
                android:text="@string/Area"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="20dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.75"
            app:cardBackgroundColor="@color/bottom_selector"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp">

            <Button
                android:id="@+id/categoryBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#f5f5f5"
                android:drawableLeft="@mipmap/fork"
                android:drawableTint="#000000"
                android:text="@string/Caategory"
                android:textColor="#000000"
                android:textSize="20sp"
                app:cornerRadius="20dp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.75"
            app:cardBackgroundColor="@color/bottom_selector"
            app:cardCornerRadius="20dp"
            app:cardElevation="30dp">

            <Button
                android:id="@+id/mealBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#f5f5f5"
                android:drawableLeft="@mipmap/fork"
                android:drawableTint="#000000"
                android:text="@string/Meals"
                android:textColor="#000000"
                android:textSize="20sp"
                app:cornerRadius="20dp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
