<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/signup"
    tools:context=".authentication.authView.SignupFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SIGNUP"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/gradient_button"
        android:fontFamily="@font/gabriola"
        android:gravity="center"
        android:insetBottom="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:shadowColor="#000000"
        android:shadowDx="1.9"
        android:shadowDy="1.7"
        android:shadowRadius="2"
        android:text="@string/Signup"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/yellow_dark"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:textColor="@color/black"
        android:textColorHint="#918C8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/yellow_dark"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:minHeight="50dp"
        android:textColor="@color/black"
        android:textColorHint="#918C8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/yellow_dark"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email Address"
        android:inputType="textPersonName"
        android:minHeight="50dp"
        android:textColor="@color/black"
        android:textColorHint="#918C8C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/butterchicken"
        android:text="@string/SignUP"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:background="#000000"
        android:backgroundTint="@color/bottom_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/butterchicken"
        android:text="@string/Login"
        android:textColor="#9A9797"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>